k8s/service-a/service-a-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-a
spec:
  type: ClusterIP
  selector:
    app: service-a
  ports:
    - port: 3000
      targetPort: 3000
